--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="game/imagens/llogo.png.png" type="image/x-icon">
-     <link rel="stylesheet" href="game/css/index.css">
+    <link rel="stylesheet" href="game/css/index.css">
     <title>Secret Number</title>
 </head>
+
 <body>
-    
-   
-    
-<h1>Secret Number</h1>
-
-<p>Tente descobrir qual é o número secreto...se conseguir !</p>
-
-<div>
-    <h2>Modos de jogo</h2>
-<a href="./game/easy/homeE.html" id="easy">Easy</a>
-<a href="./game/medium/homeM.html" id="medium">Medium</a>
-<a href="./game/hard/homeH.html" id="hard">Hard</a>
-</div>
 
 
+
+    <h1 >Secret Number</h1>
+
+    <p>Tente descobrir qual é o número secreto...se conseguir !</p>
+
+
+    <h2 id="easy">Modos de jogo</h2>
+<a href=""></a>
+
+    <div id="flex">
+
+
+        <div class="bloco">
+
+            <h3>Easy</h3>
+
+
+            <p>Tente descobrir o número secreto entre 1 e 100 com um número ilimitado de chances.</p>
+            <a href="./game/easy/homeE.html" id="easy">Jogar</a>
+
+
+        </div>
+
+        <div class="bloco">
+            <h3>Medium</h3>
+
+
+            <p>Tente descobrir o número secreto entre 1 e 200 em apenas 45 segundos !</p>
+            <a href="./game/medium/homeM.html" id="medium">Jogar</a>
+
+
+        </div>
+
+        <div class="bloco">
+            <h3>Hard</h3>
+
+
+            <p>Tente descobrir o número secreto entre 1 e 300 em apenas 30 segundos !</p>
+            <a href="./game/hard/homeH.html" id="hard">Jogar</a>
+
+
+        </div>
+
+    </div>
+
+    <script src="./game/javascript/index.js"></script>
 
 </body>
+
 </html>
