--- a/game/medium/homeM.html
+++ b/game/medium/homeM.html
@@ -16,7 +16,7 @@
   <div id="timer"></div>
  
   <div id="container">
-    <h2 id="sn">Digite o número secreto</h2>
+    <h2 id="sn">Descubra o número secreto</h2>
     
   
     <div class="bloco">
