--- a/game/easy/homeE.html
+++ b/game/easy/homeE.html
@@ -12,7 +12,7 @@
 <body id="body">
  
   <div id="container">
-    <h2 id="sn">Digite o número secreto</h2>
+    <h2 id="sn">Descubra o número secreto</h2>
     
   
     <div class="bloco">
