--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="game/imagens/llogo.png.png" type="image/x-icon">
+    <link rel="shortcut icon" href="game/imagens/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="game/css/index.css">
     <title>Secret Number</title>
 </head>
