--- a/game/easy/homeE.html
+++ b/game/easy/homeE.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <link rel="shortcut icon" href="../imagens/llogo.png.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imagens/logo.png" type="image/x-icon">
   <title>Easy</title>
   <link href="../css/easy.css" rel="stylesheet" type="text/css" />
 </head>
