--- a/game/hard/homeH.html
+++ b/game/hard/homeH.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Hard</title>
-  <link rel="shortcut icon" href="../imagens/llogo.png.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../imagens/logo.png" type="image/x-icon">
   <link href="../css/hard.css" rel="stylesheet" type="text/css" />
 </head>
 
