--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
             <p>Tente descobrir o número secreto entre 1 e 100 com um número ilimitado de chances.</p>
-            <a href="./game/easy/homeE.html" id="easy">Jogar</a>
+            <a href="./game/easy/homeE.html" id="easy">Play</a>
 
 
         </div>
@@ -41,7 +41,7 @@
 
 
             <p>Tente descobrir o número secreto entre 1 e 200 em apenas 45 segundos !</p>
-            <a href="./game/medium/homeM.html" id="medium">Jogar</a>
+            <a href="./game/medium/homeM.html" id="medium">Play</a>
 
 
         </div>
@@ -51,7 +51,7 @@
 
 
             <p>Tente descobrir o número secreto entre 1 e 300 em apenas 30 segundos !</p>
-            <a href="./game/hard/homeH.html" id="hard">Jogar</a>
+            <a href="./game/hard/homeH.html" id="hard">Play</a>
 
 
         </div>
