--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Tente descobrir qual é o número secreto...se conseguir !</p>
 
 
-    <h2 id="easy">Modos de jogo</h2>
+    <h2 id="modos">Modos de jogo</h2>
 <a href=""></a>
 
     <div id="flex">
